# esc412_advanced_high_performance_computing

./: .clang-format  .gitignore  CMakeLists.txt  FindFFTW.cmake  Makefile  Makefile.daint  README.md
blitz-build/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Makefile  blitz.pc  cmake_install.cmake  install_manifest.txt
blitz-build/blitz/: CTestTestfile.cmake  Makefile  cmake_install.cmake  matbops.h  mathfunc.h  matuops.h  promote-old.h  vecbfn.cc  vecbops.cc  vecuops.cc  vecwhere.cc
blitz-build/blitz/array/: CTestTestfile.cmake  Makefile  bops.cc  cmake_install.cmake  uops.cc
blitz-build/blitz/generate/: CTestTestfile.cmake  Makefile  cmake_install.cmake  genarrbops  genarruops  genmatbops  genmathfunc  genmatuops  genpromote  genvecbfn  genvecbops  genvecuops  genvecwhere
blitz-build/blitz/meta/: CTestTestfile.cmake  Makefile  cmake_install.cmake
blitz-build/random/: CTestTestfile.cmake  Makefile  cmake_install.cmake
blitz-build/src/: CTestTestfile.cmake  Makefile  cmake_install.cmake
exercise3/: FFT.ipynb  README.md  density_map.ipynb  main  main.cxx  mass_grid_2nd_2d.csv  mass_grid_3rd_2d.csv  mass_grid_4th_2d.csv  mass_grid_ngp_2d.csv
exercise3/.ipynb_checkpoints/: density_map-checkpoint.py
include/: my_io.h
include/blitz/: mathfunc.h  matuops.h  promote-old.h  vecbfn.cc  vecbops.cc  vecuops.cc  vecwhere.cc
include/blitz/array/: bops.cc  uops.cc
lecture1-build/: array1  array2  array3  array4  array5  array6  types
lecture1-code/: ._array1.cxx  ._array2.cxx  ._array3.cxx  ._array4.cxx  ._array5.cxx  ._array6.cxx  ._array7.cxx  ._carray.cxx  ._types.cxx  array1.cxx  array2.cxx  array3.cxx  array4.cxx  array5.cxx  array6.cxx  array7.cxx  carray.cxx  types.cxx
lecture2-code/: ._aweights.hpp  ._readtipsy.py  ._testa.cxx  ._testio.cxx  ._tipsy.cxx  ._tipsy.h  README.md  density_map.ipynb  density_map.py  mass_grid_2d.csv  mass_grid_4th_2d.csv  test.txt  testio  testio.cxx
lib/: libblitz.so.1.0.2
lib/cmake/: blitzTargets.cmake
make-build/: main_mpi_openmp  main_mpi_openmp_sample
scripts/: compare_spectra.py  density_map.ipynb  density_map.py  load_python.sh  make_cuda.sh  make_mpi_openmp.sh  run_cuda.slurm  run_cuda_mpi_openmp.slurm  run_ex13-1.slurm  run_ex13-2.slurm  run_mpi_openmp.slurm  show_grid.py
src/: Exercise13-1.cu  Exercise13-2.cu  density_map.ipynb  fft.cu  fft.h  fourier_transform.h  get_time.cpp  get_time.h  io_utils.h  main  main.cpp  main.cxx  main_cuda.cpp  main_cuda.cu  main_cuda_mpi_openmp.cpp  main_ex9.cpp  main_mpi_openmp.cpp  main_mpi_openmp_sample.cpp  main_serial.cpp  mass_assignement.h  mass_grid_modulo_2d.csv  mass_grid_with_margins_2d.csv  my_io.cpp  my_io.h  sample_solution_mpi_openmp.cpp  test_mass_assignement.cpp  test_transformations.cpp  transformations.h  transpose.cpp
